# device-mapper-service

./: LICENSE  README.md  meson.build  meson_options.txt
SPECS/: device-mapper-service.spec
data/: device-mapper@.service.in  dm-create.sh.in
